Adding preload-create-update slide

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset='utf-8'>
     <title>The Fallen Invaders</title>
+    <link rel="stylesheet" href="css/slides.css">
     <style type="text/css">
       iframe {
         border: none;
